try to resolve #620 - drupal vs sticky overlap

--- a/web/themes/quartiers_solidaires/assets/components/layout.scss
+++ b/web/themes/quartiers_solidaires/assets/components/layout.scss
@@ -16,3 +16,7 @@
 #toolbar-administration {
   z-index: ($zindex-tooltip * 2);
 }
+
+body.toolbar-fixed .toolbar-oriented .toolbar-bar {
+  z-index: ($zindex-tooltip * 2);
+}
